# genome

./: .gitignore  Cargo.toml  README.md  Taskfile.dist.yaml  download-hg38.sh
dna-playground/: Cargo.toml
dna-playground/src/: align.rs  cigar.rs  dna.rs  fasta.rs  generate.rs  index.rs  kmer.rs  local_align.rs  main.rs  metrics.rs  report.rs
genome-inspect/: Cargo.toml
genome-inspect-manual/: Cargo.toml
genome-inspect-manual/src/: cli.rs  fetch.rs  index.rs  inspect.rs  main.rs  types.rs  utils.rs  windows.rs
genome-inspect/src/: main.rs
genome-viz/: Cargo.toml
genome-viz/src/: app.rs  complement.rs  display.rs  main.rs  reader.rs
hg38/: hg38.chromAlias.txt  md5sum.txt
