[package]
name = "dna-playground"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "dna-playground"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
needletail.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
